# static-analyzer

./: .gitignore  CMakeLists.txt
checks/: AdvancedMemoryManagement.cpp  CStyleCast.cpp  ConstCast.cpp  DanglingAssignment.cpp  DefaultArgOverride.cpp  DependentBaseLookup.cpp  DynamicMemory.cpp  DynamicTypeInCtorDtor.cpp  ExplicitBaseInit.cpp  ExplicitConstructor.cpp  FunctionTemplateSpecialization.cpp  HiddenFunction.cpp  IntToPointerCast.cpp  MissingElse.cpp  MixedVirtualInheritance.cpp  MovedFromState.cpp  Noexcept.cpp  OverlappingCopy.cpp  RefQualifiedMember.cpp  ReinterpretCast.cpp  SelfAssignment.cpp  ThrowPointer.cpp  UninitializedMember.cpp  UnusedFunction.cpp  UnusedParameter.cpp  UnusedReturnValue.cpp  UnusedType.cpp  UnusedVariable.cpp  VirtualBaseCast.cpp  VirtualMemberPtrComparison.cpp  VirtualSpecifier.cpp
include/: Checks.h
src/: main.cpp
tests/samples/: test1.cpp  test_all.cpp
